tests/type-errors/decl_no_asset_aggregate.arl
archetype decl_no_asset_aggregate

asset my_asset {
  id : string;
}

variable a : my_asset aggregate = []

entry exec() {
  effect {
    ()
  }
}
